--- a/doc-Installing_CloudForms_on_VMware_vSphere/Additional_Configuration.adoc
+++ b/doc-Installing_CloudForms_on_VMware_vSphere/Additional_Configuration.adoc
@@ -5,14 +5,14 @@
 
 Execution of SmartState Analysis on virtual machines within a VMware environment requires the Virtual Disk Development Kit (VDDK). CloudForms Management Engine supports VDDK 5.5.
 
-. Download VDDK 5.5 (VMware-vix-disklib-5.5.0-1284542.x86_64.tar.gz at the time of this writing) from the VMware website.
+. Download `VDDK 5.5` (`VMware-vix-disklib-5.5.0-1284542.x86_64.tar.gz` at the time of this writing) from the VMware website.
 +
 [NOTE]
 =======
-If you do not already have a login ID to VMware, then you will need to create one. At the time of this writing, the file can be found by navigating to +Downloads → All Downloads, Drivers & Tools → VMware vSphere → Drivers & Tools+. Expand Automation Tools and SDKs, and select vSphere Virtual Disk Development Kit 5.5. Alternatively, find the file by searching for it using the Search on the VMware site.
+If you do not already have a login ID to VMware, then you will need to create one. At the time of this writing, the file can be found by navigating to menu:Downloads[All Downloads, Drivers & Tools]. Select menu:VMware vSphere[Drivers & Tools]. Expand *Automation Tools and SDKs*, and select *vSphere Virtual Disk Development Kit 5.5*. Alternatively, find the file by searching for it using the *Search* on the VMware site.
 =======
 +
-. Download and copy the +VMware-vix-disklib-5.5.0-1284542.x86_64.tar.gz+ file to the +/root+ directory of the appliance.
+. Download and copy the `VMware-vix-disklib-5.5.0-1284542.x86_64.tar.gz` file to the `/root` directory of the appliance.
 . Start an SSH session into the appliance.
 . Extract and install VDDK 5.5. using the following commands:
 +
@@ -34,7 +34,7 @@ The installation of VMware VIX DiskLib API 5.5.0 build-1284542 for Linux complet
 "/usr/bin/vmware-uninstall-vix-disklib.pl". Enjoy, --the VMware team
 ----
 +
-. Run +ldconfig+ in order for CloudForms Management Engine to find the newly installed VDDK library.
+. Run `ldconfig` in order for CloudForms Management Engine to find the newly installed VDDK library.
 
 +
 [NOTE]
@@ -49,4 +49,3 @@ Use the following command to verify the VDDK files are listed and accessible to 
 . Restart the CloudForms Management Engine Appliance.
 
 The VDDK is now installed on the CloudForms Management Engine Appliance. This enables use of the SmartState Analysis Server Role on the appliance.
-
