--- a/doc-Installing_CloudForms_on_VMware_vSphere/Configuring_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_VMware_vSphere/Configuring_CloudForms.adoc
@@ -12,12 +12,12 @@ The CloudForms Management Engine Appliance is intended to have minimal configura
 
 The procedure describes how to make changes to the configuration settings on the CloudForms Management Engine appliance.
 
-. After starting the appliance, log in with a user name of **root** and the default password of **smartvm**. This displays the Bash prompt for the **root** user.
-. Enter the **appliance_console** command. The CloudForms Management Engine Appliance summary screen displays.
-. Press +Enter+ to manually configure settings.
-. Press the number for the item you want to change, and press +Enter+. The options for your selection are displayed.
+. After starting the appliance, log in with a user name of `root` and the default password of `smartvm`. This displays the Bash prompt for the `root` user.
+. Enter the `appliance_console` command. The CloudForms Management Engine Appliance summary screen displays.
+. Press *Enter* to manually configure settings.
+. Press the number for the item you want to change, and press *Enter*. The options for your selection are displayed.
 . Follow the prompts to make the changes.
-. Press +Enter+ to accept a setting where applicable.
+. Press *Enter* to accept a setting where applicable.
 
 [NOTE]
 =======
@@ -28,30 +28,30 @@ The CloudForms Management Engine Appliance console automatically logs out after 
 
 After logging in, you can use the following menu items for advanced configuration of the appliance:
 
-* Use +Set DHCP Network Configuration+ to use DHCP to obtain the IP address and network configuration for your CloudForms Management Engine Appliance. The appliance is initially configured as a DHCP client with bridged networking.
-* Use +Set Static Network Configuration+ if you have a specific IP address and network settings you need to use for the CloudForms Management Engine Appliance.
-* Use +Test Network Configuration+ to check that name resolution is working correctly.
-* Use +Set Hostname+ to specify a hostname for the CloudForms Management Engine Appliance.
+* Use *Set DHCP Network Configuration* to use DHCP to obtain the IP address and network configuration for your CloudForms Management Engine Appliance. The appliance is initially configured as a DHCP client with bridged networking.
+* Use *Set Static Network Configuration* if you have a specific IP address and network settings you need to use for the CloudForms Management Engine Appliance.
+* Use *Test Network Configuration* to check that name resolution is working correctly.
+* Use *Set Hostname* to specify a hostname for the CloudForms Management Engine Appliance.
 +
 [IMPORTANT]
 =========
 A valid fully qualified hostname for the CloudForms Management Engine appliance is required for SmartState analysis to work correctly,
 =========
 +
-* Use +Set Timezone, Date, and Time+ to configure the time zone, date, and time for the CloudForms Management Engine Appliance.
-* Use +Restore Database from Backup+ to restore the VMDB database from a previous backup.
-* Use +Setup Database Region+ to create regions for VMDB replication.
-* Use +Configure Database+ to configure the VMDB database. Use this option to configure the database for the appliance after installing and running it for the first time.
-* Use +Extend Temporary Storage+ to add temporary storage to the appliance. The appliance formats an unpartitioned disk attached to the appliance host and mounts it at **/var/www/miq_tmp**. The appliance uses this temporary storage directory to perform certain image download functions.
-* Use +Configure External Authentication (httpd)+ to configure authentication through an IPA server.
-* Use +Generate Custom Encryption Key+ to regenerate the encryption key used to encode plain text password.
-* Use +Harden Appliance Using SCAP Configuration+ to apply Security Content Automation Protocol (SCAP) standards to the appliance. You can view these SCAP rules in the **/var/www/miq/lib/appliance_console/config/scap_rules.yml** file.
-* Use +Stop Server Processes+ to stop all server processes. You may need to do this to perform maintenance.
-* Use +Start Server Processes+ to start the server. You may need to do this after performing maintenance.
-* Use +Restart Appliance+ to restart the CloudForms Management Engine Appliance. You can either restart the appliance and clear the logs or just restart the appliance.
-* Use +Shut Down Appliance+ to power down the appliance and exit all processes.
-* Use +Summary Information+ to go back to the network summary screen for the CloudForms Management Engine Appliance.
-* Use +Quit+ to leave the CloudForms Management Engine Appliance console.
+* Use *Set Timezone, Date, and Time* to configure the time zone, date, and time for the CloudForms Management Engine Appliance.
+* Use *Restore Database from Backup* to restore the VMDB database from a previous backup.
+* Use *Setup Database Region* to create regions for VMDB replication.
+* Use *Configure Database* to configure the VMDB database. Use this option to configure the database for the appliance after installing and running it for the first time.
+* Use *Extend Temporary Storage* to add temporary storage to the appliance. The appliance formats an unpartitioned disk attached to the appliance host and mounts it at `/var/www/miq_tmp`. The appliance uses this temporary storage directory to perform certain image download functions.
+* Use *Configure External Authentication (httpd)* to configure authentication through an IPA server.
+* Use *Generate Custom Encryption Key* to regenerate the encryption key used to encode plain text password.
+* Use *Harden Appliance Using SCAP Configuration* to apply Security Content Automation Protocol (SCAP) standards to the appliance. You can view these SCAP rules in the `/var/www/miq/lib/appliance_console/config/scap_rules.yml` file.
+* Use *Stop Server Processes* to stop all server processes. You may need to do this to perform maintenance.
+* Use *Start Server Processes* to start the server. You may need to do this after performing maintenance.
+* Use *Restart Appliance* to restart the CloudForms Management Engine Appliance. You can either restart the appliance and clear the logs or just restart the appliance.
+* Use *Shut Down Appliance* to power down the appliance and exit all processes.
+* Use *Summary Information* to go back to the network summary screen for the CloudForms Management Engine Appliance.
+* Use *Quit* to leave the CloudForms Management Engine Appliance console.
 
 [[configuring_a_database]]
 === Configuring a Database for CloudForms Management Engine
@@ -63,7 +63,7 @@ Before using CloudForms Management Engine, configure the database options for it
 
 [NOTE]
 =======
-See "CPU Sizing Assistant for a Dedicated VMDB Host" in the Deployment Planning Guide for guidelines on CPU requirements.
+See link:https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/deployment-planning-guide/#cpu_sizing_assistant_for_a_dedicated_vmdb_host[CPU Sizing Assistant for a Dedicated VMDB Host] in the Deployment Planning Guide for guidelines on CPU requirements.
 =======
 
 === Configuring an Internal Database
@@ -72,16 +72,15 @@ See "CPU Sizing Assistant for a Dedicated VMDB Host" in the Deployment Planning 
 =======
 Before installing an internal database, add a disk to the infrastructure hosting your appliance. See the documentation specific to your infrastructure for instructions on how to add a disk. As a storage disk usually cannot be added while a virtual machine is running, Red Hat recommends adding the disk before starting the appliance.
 =======
-
 . Start the appliance and open a terminal from your virtualization or cloud provider.
-. After starting the appliance, log in with a user name of **root** and the default password of **smartvm**. This displays the Bash prompt for the **root** user.
-. Enter the **appliance_console** command. The CloudForms Management Engine Appliance summary screen displays.
-. Press +Enter+ to manually configure settings.
-. Select +8) Configure Database+ from the menu.
+. After starting the appliance, log in with a user name of `root` and the default password of `smartvm`. This displays the Bash prompt for the `root` user.
+. Enter the `appliance_console` command. The CloudForms Management Engine Appliance summary screen displays.
+. Press *Enter* to manually configure settings.
+. Select *8) Configure Database* from the menu.
 . You are prompted to create or fetch an encryption key.
-* If this is the first CFME appliance, choose +1) Create key+.
-* If this is not the first CFME appliance, choose +2) Fetch key+ from remote machine to fetch the key from the first CFME appliance. All CFME appliances in a multi-region deployment must use the same key.
-. Choose +1) Internal+ for the database location.
+* If this is the first CFME appliance, choose *1) Create key*.
+* If this is not the first CFME appliance, choose *2) Fetch key* from remote machine to fetch the key from the first CFME appliance. All CFME appliances in a multi-region deployment must use the same key.
+. Choose *1) Internal* for the database location.
 . Choose a disk for the database. For example:
 +
 ----
@@ -90,7 +89,7 @@ Before installing an internal database, add a disk to the infrastructure hosting
 Choose disk:
 ----
 +
-Enter +1+ to choose /dev/vdb for the database location.
+Enter *1* to choose /dev/vdb for the database location.
 
 .  When prompted, enter a unique three digit region ID to create a new region.
 +
@@ -114,18 +113,18 @@ Because the postgresql.conf file controls the operation of all databases managed
 
 [NOTE]
 =======
-CloudForms Management Engine 3.x requires PostgreSQL version 9.2.4.
+CloudForms Management Engine 4.x requires PostgreSQL version 9.4.
 =======
 
-. Start the appliance and open a terminal console from your virtualization or cloud provider.
-. After starting the appliance, log in with a user name of **root** and the default password of **smartvm**. This displays the Bash prompt for the **root** user.
-. Enter the **appliance_console** command. The CloudForms Management Engine Appliance summary screen displays.
-. Press +Enter+ to manually configure settings.
-. Select +8) Configure Database+ from the menu.
+. Start the appliance and open a terminal from your virtualization or cloud provider.
+. After starting the appliance, log in with a user name of `root` and the default password of `smartvm`. This displays the Bash prompt for the `root` user.
+. Enter the `appliance_console` command. The CloudForms Management Engine Appliance summary screen displays.
+. Press *Enter* to manually configure settings.
+. Select *8) Configure Database* from the menu.
 . You are prompted to create or fetch a security key.
 * If this is the first CFME appliance, select the option to create a key.
 * If this is not the first CFME appliance, select the option to fetch the key from the first CFME appliance. All CFME appliances in a multi-region deployment must use the same key.
-. Choose +2)+ External for the database location.
+. Choose *2) External* for the database location.
 . Enter the database hostname or IP address when prompted.
 . Enter the database name or leave blank for the default (vmdb_production).
 . Enter the database username or leave blank for the default (root).
@@ -138,13 +137,13 @@ CloudForms Management Engine configures the external database.
 
 You can configure a worker appliance through the terminal. These steps demonstrate how to join a worker appliance to an appliance that already has a region configured with a database.
 
-. Start the appliance, and open a terminal console from your virtualization or cloud provider.
-. After starting the appliance, log in with a user name of **root** and the default password of **smartvm**. This displays the Bash prompt for the **root** user.
-. Enter the **appliance_console** command. The CloudForms Management Engine Appliance summary screen displays.
-. Press +Enter+ to manually configure settings.
-. Select +8) Configure Database+ from the menu.
+. Start the appliance and open a terminal from your virtualization or cloud provider.
+. After starting the appliance, log in with a user name of `root` and the default password of `smartvm`. This displays the Bash prompt for the `root` user.
+. Enter the `appliance_console` command. The CloudForms Management Engine Appliance summary screen displays.
+. Press *Enter* to manually configure settings.
+. Select *8) Configure Database* from the menu.
 . You are prompted to create or fetch a security key. Select the option to fetch the key from the first CFME appliance. All CFME appliances in a multi-region deployment must use the same key.
-. Choose +2) External+ for the database location.
+. Choose *2) External* for the database location.
 . Enter the database hostname or IP address when prompted.
 . Enter the database name or leave blank for the default (vmdb_production).
 . Enter the database username or leave blank for the default (root).
