--- a/doc-Defining_Policies_and_Profiles/topics/Creating_Policy_Profiles.adoc
+++ b/doc-Defining_Policies_and_Profiles/topics/Creating_Policy_Profiles.adoc
@@ -1,23 +1,16 @@
 === Creating Policy Profiles
 
-Policy profiles are groups of policies that you need to use at the same
-time. A policy profile can have one or more policies. Policy profiles
-can be assigned to either a host or a virtual machine.
+Policy profiles are groups of policies that you need to use at the same time. A policy profile can have one or more policies. Policy profiles can be assigned to either a host or a virtual machine.
 
-. Navigate to *Control → Explorer*.
+. Navigate to menu:Control[Explorer].
 
-. Click on the *Policy Profiles* accordion, then click
-image:../images/1847.png[image] (*Configuration*), then
-image:../images/1848.png[image] (*Add a New Policy Profile*).
+. Click on the *Policy Profiles* accordion, then click image:../images/1847.png[image] (*Configuration*), then image:../images/1848.png[image] (*Add a New Policy Profile*).
 
-. In the *Basic Information* area, type in a unique description for the
-policy profile.
+. In the *Basic Information* area, type in a unique description for the policy profile.
 +
 image:../images/1931.png[image]
 
-. From *Available Policies* in the *Policy Selection* area select all the
-policies you need to apply to this policy profile. Use the `Ctrl` key to
-select multiple policies.
+. From *Available Policies* in the *Policy Selection* area select all the policies you need to apply to this policy profile. Use the `Ctrl` key to select multiple policies.
 +
 image:../images/1930.png[image]
 
@@ -29,7 +22,5 @@ image:../images/1929.png[image]
 
 . Click *Add*.
 
-The policy profile is added. You can now assign the policy profile to
-providers, hosts, and repositories. In addition, you can verify that the
-virtual machine complies with the policy profile using the `Resultant
-Set of Policy` feature.
+The policy profile is added. You can now assign the policy profile to providers, hosts, and repositories. In addition, you can verify that the virtual machine complies with the policy profile using the *Resultant
+Set of Policy* feature.
