--- a/doc-Defining_Policies_and_Profiles/topics/Editing_an_Action.adoc
+++ b/doc-Defining_Policies_and_Profiles/topics/Editing_an_Action.adoc
@@ -1,23 +1,17 @@
 === Editing an Action
 
-Edit an action to modify its properties. You cannot edit any of the
-default actions supplied with CloudForms Management Engine. Only actions
-that you create can be changed.
+Edit an action to modify its properties. You cannot edit any of the default actions supplied with CloudForms Management Engine. Only actions that you create can be changed.
 
-Note that when you view an action, you can see what policies it has been
-assigned to.
+Note that when you view an action, you can see what policies it has been assigned to.
 
-. Navigate to *Control → Explorer*.
+. Navigate to menu:Control[Explorer].
 
 . Click the *Actions* accordion, then click on the action you need to edit.
 
-. Click image:../images/1847.png[image] (*Configuration*),
-image:../images/1851.png[image] (*Edit this Action*) on the detail view of
-the action.
+. Click image:../images/1847.png[image] (*Configuration*), image:../images/1851.png[image] (*Edit this Action*) on the detail view of the action.
 
 . Make any required changes.
 
 . Click *Save*.
 
-The action is modified and can be added to a policy. If the action is
-already party of a policy, the policy is automatically updated.
+The action is modified and can be added to a policy. If the action is already party of a policy, the policy is automatically updated.
