--- a/doc-Defining_Policies_and_Profiles/topics/To_create_an_Inherit_Tag_Action.adoc
+++ b/doc-Defining_Policies_and_Profiles/topics/To_create_an_Inherit_Tag_Action.adoc
@@ -1,9 +1,8 @@
 ==== Creating an Inherit Tag Action
 
-. Navigate to *Control → Explorer*.
+. Navigate to menu:Control[Explorer].
 
-. Click the *Actions* accordion, and click image:../images/1847.png[image]
-(*Configuration*), image:../images/1848.png[image] (*Add a new Action*).
+. Click the *Actions* accordion, and click image:../images/1847.png[image] (*Configuration*), image:../images/1848.png[image] (*Add a new Action*).
 
 . Type in a *Description* for the action.
 +
