--- a/doc-Defining_Policies_and_Profiles/topics/To_create_an_SNMP_Action.adoc
+++ b/doc-Defining_Policies_and_Profiles/topics/To_create_an_SNMP_Action.adoc
@@ -1,27 +1,20 @@
 ==== Creating an SNMP Action
 
-To send SNMP traps from the CloudForms Management Engine server, you
-must have the `Notifier` server role and the SNMP daemons enabled. For
-information on enabling SNMP, see the link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.0/general-configuration/general-configuration[General Configuration]
+To send SNMP traps from the CloudForms Management Engine server, you must have the `Notifier` server role and the SNMP daemons enabled. For information on enabling SNMP, see the link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.0/general-configuration/general-configuration[General Configuration]
 guide.
 
-. Navigate to *Control → Explorer*.
+. Navigate to menu:Control[Explorer].
 
-. Click the *Actions* accordion, then click image:../images/1847.png[image]
-(*Configuration*), image:../images/1848.png[image] (*Add a new Action*).
+. Click the *Actions* accordion, then click image:../images/1847.png[image] (*Configuration*), image:../images/1848.png[image] (*Add a new Action*).
 
 . Enter a *Description* for the action.
 
 . Select *Send an SNMP* Trap from *Action Type*.
 
-. Type in the IP for the host to send the trap to, select the version of
-SNMP that you are using, and type in the Trap Object ID. Type in
-multiple hosts if you require the trap sent to multiple SNMP hosts.
+. Type in the IP for the host to send the trap to, select the version of SNMP that you are using, and type in the Trap Object ID. Type in multiple hosts if you require the trap sent to multiple SNMP hosts.
 
-* If using SNMP V1, you are prompted for a Trap Number. Type 1, 2, or 3,
-based on the appropriate Suffix Number from table below.
-* If using SNMP V2, you are prompted for a Trap Object ID. Type info,
-warning, or critical, based on the table below.
+* If using SNMP V1, you are prompted for a Trap Number. Type 1, 2, or 3, based on the appropriate Suffix Number from table below.
+* If using SNMP V2, you are prompted for a Trap Object ID. Type info, warning, or critical, based on the table below.
 +
 Trap Object ID and Suffix Number
 +
