--- a/doc-Defining_Policies_and_Profiles/topics/To_create_an_e-mail_Action.adoc
+++ b/doc-Defining_Policies_and_Profiles/topics/To_create_an_e-mail_Action.adoc
@@ -1,14 +1,11 @@
 ==== Creating an E-mail Action
 
-To send emails from the CloudForms Management Engine server, you must
-have the notifier server role enabled and have defined settings for SMTP
-email. For further information regarding SMTP, see the link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.0/general-configuration/general-configuration[General Configuration]
+To send emails from the CloudForms Management Engine server, you must have the notifier server role enabled and have defined settings for SMTP email. For further information regarding SMTP, see the link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.0/general-configuration/general-configuration[General Configuration]
 guide.
 
-. Navigate to *Control → Explorer*.
+. Navigate to menu:Control[Explorer].
 
-. Click the *Actions* accordion, then click image:../images/1847.png[image]
-(*Configuration*), image:../images/1848.png[image] (*Add a new Action*).
+. Click the *Actions* accordion, then click image:../images/1847.png[image] (*Configuration*), image:../images/1848.png[image] (*Add a new Action*).
 
 . Type in a *Description* for the action.
 +
