--- a/doc-Defining_Policies_and_Profiles/topics/To_evaluate_an_Alert.adoc
+++ b/doc-Defining_Policies_and_Profiles/topics/To_evaluate_an_Alert.adoc
@@ -1,9 +1,8 @@
 ==== Evaluating an Alert
 
-. Navigate to *Control → Explorer*.
+. Navigate to menu:Control[Explorer].
 
-. Click the *Actions* accordion, then click image:../images/1847.png[image]
-(*Configuration*), image:../images/1848.png[image] (*Add a new Action*).
+. Click the *Actions* accordion, then click image:../images/1847.png[image] (*Configuration*), image:../images/1848.png[image] (*Add a new Action*).
 
 . Type in a *Description* for the action.
 +
@@ -11,9 +10,7 @@ image:../images/1911.png[image]
 
 . Select *Evaluate Alerts* from *Action Type*.
 
-. Select the alerts to be evaluated and click image:../images/1876.png[image]
-(Move selected Alerts into this Action). Use the *Ctrl* key to select
-multiple alerts.
+. Select the alerts to be evaluated and click image:../images/1876.png[image] (Move selected Alerts into this Action). Use the 'Ctrl' key to select multiple alerts.
 +
 image:../images/1912.png[image]
 
