--- a/doc-Defining_Policies_and_Profiles/topics/To_evaluate_an_Alert.adoc
+++ b/doc-Defining_Policies_and_Profiles/topics/To_evaluate_an_Alert.adoc
@@ -10,7 +10,7 @@ image:../images/1911.png[image]
 
 . Select *Evaluate Alerts* from *Action Type*.
 
-. Select the alerts to be evaluated and click image:../images/1876.png[image] (Move selected Alerts into this Action). Use the 'Ctrl' key to select multiple alerts.
+. Select the alerts to be evaluated and click image:../images/1876.png[image] (Move selected Alerts into this Action). Use the `Ctrl` key to select multiple alerts.
 +
 image:../images/1912.png[image]
 
