--- a/doc-Defining_Policies_and_Profiles/topics/To_remove_Policy_Profiles_from_a_Management_System.adoc
+++ b/doc-Defining_Policies_and_Profiles/topics/To_remove_Policy_Profiles_from_a_Management_System.adoc
@@ -1,12 +1,9 @@
 ==== Removing Policy Profiles from a Provider
 
-. Navigate to *Infrastructure → Providers*, check the providers you want to
-remove the policy profile from.
+. Navigate to menu:Infrastructure[Providers], check the providers you want to remove the policy profile from.
 
-. Click image:../images/1941.png[image] (*Policy*), and then click
-image:../images/1952.png[image](*Manage Policies*).
+. Click image:../images/1941.png[image] (*Policy*), and then click image:../images/1952.png[image](*Manage Policies*).
 
-. Uncheck the policy profile you need to remove. It turns blue to show
-that its assignment state has changed.
+. Uncheck the policy profile you need to remove. It turns blue to show that its assignment state has changed.
 
 . Click *Save*.
