--- a/doc-Defining_Policies_and_Profiles/topics/To_remove_Policy_Profiles_from_a_Repository.adoc
+++ b/doc-Defining_Policies_and_Profiles/topics/To_remove_Policy_Profiles_from_a_Repository.adoc
@@ -1,15 +1,11 @@
 ==== Removing Policy Profiles from a Repository
 
-. Navigate to *Infrastructure → Repositories*, check the repositories you need
-to remove the policy profile from.
+. Navigate to menu:Infrastructure[Repositories], check the repositories you need to remove the policy profile from.
 
-. Click image:../images/1941.png[image] (*Policy*), and then click
-image:../images/1952.png[image](*Manage Policies*).
+. Click image:../images/1941.png[image] (*Policy*), and then click image:../images/1952.png[image](*Manage Policies*).
 
-. From the *Select Policy Profiles* area, click on the triangle next to a
-desired policy profile to expand it and see its member policies.
+. From the *Select Policy Profiles* area, click on the triangle next to a desired policy profile to expand it and see its member policies.
 
-. Uncheck the policy profile you need to remove. It turns blue to show
-that its assignment state has changed.
+. Uncheck the policy profile you need to remove. It turns blue to show that its assignment state has changed.
 
 . Click *Save*.
