--- a/doc-Defining_Policies_and_Profiles/topics/To_remove_Policy_Profiles_from_a_Resource_Pool.adoc
+++ b/doc-Defining_Policies_and_Profiles/topics/To_remove_Policy_Profiles_from_a_Resource_Pool.adoc
@@ -1,15 +1,11 @@
 ==== Removing Policy Profiles from a Resource Pool
 
-. Navigate to *Infrastructure → Resource Pools*, check the resource pools you
-need to remove the policy profiles from.
+. Navigate to menu:Infrastructure[Resource Pools], check the resource pools you need to remove the policy profiles from.
 
-. Click image:../images/1941.png[image] (*Policy*), and then click
-image:../images/1952.png[image](*Manage Policies*).
+. Click image:../images/1941.png[image] (*Policy*), and then click image:../images/1952.png[image](*Manage Policies*).
 
-. From the *Select Policy Profiles* area, click on the triangle next to a
-desired policy profile to expand it and see its member policies.
+. From the *Select Policy Profiles* area, click on the triangle next to a desired policy profile to expand it and see its member policies.
 
-. Uncheck the policy profiles you need to remove. It turns blue to show
-that its assignment state has changed.
+. Uncheck the policy profiles you need to remove. It turns blue to show that its assignment state has changed.
 
 . Click *Save*.
