--- a/doc-Appliance_Hardening_Guide/UI_Password.adoc
+++ b/doc-Appliance_Hardening_Guide/UI_Password.adoc
@@ -7,10 +7,10 @@ After installing the appliance, change the default password of the `admin` to re
 Changing the `admin` password uses the same process as changing any standard user in the appliance.
 
 . Access the appliance through your web browser and log in.
-. Navigate to *Configure → Configuration*.
+. Navigate to menu:Configure[Configuration].
 . In the accordion tree on the left, click on *Access Control*, then select the *Administrator* under the *Users* section.
   This displays the details for the `admin` user.
-. On the details page, select *Configuration → Edit this user* from the toolbar.
+. On the details page, select manu:Configuration[Edit this user] from the toolbar.
 . Enter a new password in the *Change Password / Confirm Password* fields.
 . Click *Save* at the bottom of the page.
 . Log out of the user interface.
