--- a/doc-Appliance_Hardening_Guide/Updates.adoc
+++ b/doc-Appliance_Hardening_Guide/Updates.adoc
@@ -24,7 +24,7 @@ You need the following to register:
 * A Red Hat subscription that covers your product
 
 . Log in to the Appliance as the `root` user.
-. Navigate to *Configure → Configuration*. Select *Region* in the accordion menu and click the *Red Hat Updates* tab.
+. Navigate to menu:Configure[Configuration]. Select *Region* in the accordion menu and click the *Red Hat Updates* tab.
 . In *Red Hat Software Updates*, click *Edit Registration*.
 . You can register the CloudForms Management Engine Appliance using one of three available options:
 +
