syntax and link upadtes

--- a/doc-General_Configuration/About.adoc
+++ b/doc-General_Configuration/About.adoc
@@ -1,10 +1,10 @@
 [[about]]
 == About
 
-In the +About+ area of +Configure+, you can see session information for the console, download the Red Hat CloudForms documentation in PDF format, and navigate to the Red Hat Customer Portal.
+In the *About* area of *Configure*, you can see session information for the console, download the Red Hat CloudForms documentation in PDF format, and navigate to the Red Hat Customer Portal.
 
 To view session information, documentation, and the Red Hat Customer Portal link:
 
-. Navigate to +Configure → About+.
-. To go to the Red Hat Customer Portal, click +http://access.redhat.com/home+.
+. Navigate to menu:Configure[About].
+. To go to the Red Hat Customer Portal, click link:http://access.redhat.com/home[access.redhat.com].
 . To view the documentation, click the title of the document to view.
