--- a/doc-General_Configuration/RH_Access_Insights.adoc
+++ b/doc-General_Configuration/RH_Access_Insights.adoc
@@ -57,30 +57,30 @@ Rules enable easy addition of rules which operate on customer uploaded archives.
 
 For management purposes, rules may be placed under one of four active states:
 
-* +Active+ - Rules which have been pushed to the master branch, are in prod and the content has been approved. This is the only state where the rules are displayed to customers.
+* *Active* - Rules which have been pushed to the master branch, are in prod and the content has been approved. This is the only state where the rules are displayed to customers.
 
-* +Needs Content+ - Plugins that the system has identified are in our master branch, hits have been found but do not have an entry / content written for them.
+* *Needs Content* - Plugins that the system has identified are in our master branch, hits have been found but do not have an entry / content written for them.
 
-* +Inactive+ - Once a rule is created from Needs Content, it will by default move to Inactive. Inactive can be used as a staging area as rules are written or to temporarily remove an active rule from the customer's view if further work needs to be completed. Rules can be deleted in this state
+* *Inactive* - Once a rule is created from Needs Content, it will by default move to Inactive. Inactive can be used as a staging area as rules are written or to temporarily remove an active rule from the customer's view if further work needs to be completed. Rules can be deleted in this state
 
-* +Retired+ - Plugins or error info entries which are no longer in use. - Rules can be deleted in this state
+* *Retired* - Plugins or error info entries which are no longer in use. - Rules can be deleted in this state
 
 ==== Info Listed
 
 You will find the following information available for each rule on the list
 
-* +Error Key+ - The returned key the plugin provides to alert detection.
-* +Plugin+ - Name of the plugin located in the master branch, ex: plugin.swappiness == plugins/swappiness.py
-* +Description+ - The 50 character "title" the customer sees during the drill down of issues.
-* +Category+ - Security, Stability, Performance.
-* +Severity+ - Warn, Error, Info.
-* +Count+ - The current amount of hosts the plugin has been detected by when the rules last ran.
+* *Error Key* - The returned key the plugin provides to alert detection.
+* *Plugin* - Name of the plugin located in the master branch, ex: plugin.swappiness == plugins/swappiness.py
+* *Description* - The 50 character "title" the customer sees during the drill down of issues.
+* *Category* - Security, Stability, Performance.
+* *Severity* - Warn, Error, Info.
+* *Count* - The current amount of hosts the plugin has been detected by when the rules last ran.
 
 image::RH-access-insights-rules.png[]
 
 [[rh-insights-systems]]
 === Systems Tab
 
-The Systems tab helps you discover the issues within your system. This tab lists the hostname of the system, the time of last check in and the status. You can filter the list by using image:RH-access-insights-action.png[image] (+Actions+) for all systems that require actions and image:RH-access-insights-no-action.png[image] (+No Actions+) for all systems that are working without issues and require no actions. You can also filter the list using the  +Groups+ dropdown list.
+The Systems tab helps you discover the issues within your system. This tab lists the hostname of the system, the time of last check in and the status. You can filter the list by using image:RH-access-insights-action.png[image] (*Actions*) for all systems that require actions and image:RH-access-insights-no-action.png[image] (*No Actions*) for all systems that are working without issues and require no actions. You can also filter the list using the  *Groups* dropdown list.
 
 image::RH-access-insights-systems.png[]
