--- a/doc-Managing_Infrastructure_and_Inventory/topics/Adding_a_Repository.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Adding_a_Repository.adoc
@@ -4,10 +4,10 @@ To refresh a repository for more detailed information, add it to your VMDB first
 The VMDB requires a universal naming convention (UNC) network path to the repository.
 
 . Navigate to menu:Infrastructure[Repositories].
-. Click  image:images/1847.png[] btn:[(Configuration)], then click  image:images/1848.png[] btn:[(Add a new Repository)].
-. In #Basic Information#, enter a #Name# and a UNC network #Path# to the repository location.
+. Click  image:images/1847.png[] (*Configuration*), then click  image:images/1848.png[] (*Add a new Repository*).
+. In *Basic Information*, enter a *Name* and a UNC network *Path* to the repository location.
 +
 
 image::images/2240.png[]
 
-. Click btn:[Save].
+. Click *Save*.
