--- a/doc-Managing_Infrastructure_and_Inventory/topics/Analyzing_Instances_and_Images.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Analyzing_Instances_and_Images.adoc
@@ -7,12 +7,12 @@ To perform a SmartState Analysis, CloudForms Management Engine requires a runnin
 . Navigate to menu:Clouds[Instances].
 . Click the accordion for the items to analyze.
 . Check the instances and images to analyze.
-. Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2147.png[]btn:[(Perform SmartState Analysis)] on the taskbar.
-. Click btn:[OK].
+. Click  image:images/1847.png[] (*Configuration*), and then  image:images/2147.png[] (*Perform SmartState Analysis*) on the taskbar.
+. Click *OK*.
 
 .Restrictions on Displaying Files Collected
 [NOTE]
-====
+======
 .Non-Displayable File Types
 * File size bigger than 20k characters
 * File with missing name
@@ -23,4 +23,4 @@ To perform a SmartState Analysis, CloudForms Management Engine requires a runnin
 .Displayable File Types
 * MIME .txt non binary file
 * Non MIME .conf ascii file
-====
+======
