--- a/doc-Managing_Infrastructure_and_Inventory/topics/Changing_Views_for_Instances_and_Images.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Changing_Views_for_Instances_and_Images.adoc
@@ -6,6 +6,6 @@ While you can set the default view for different pages in menu:Configuration[My 
 . Click the accordion for the items to view.
 . Click the appropriate button for the desired view.
 +
-* Click  image:images/2020.png[] for Grid View.
-* Click  image:images/2021.png[] for Tile View.
-* Click  image:images/2022.png[] for List View.
+* Click  image:images/2020.png[] for *Grid View*.
+* Click  image:images/2021.png[] for *Tile View*.
+* Click  image:images/2022.png[] for *List View*.
