--- a/doc-Managing_Infrastructure_and_Inventory/topics/Changing_the_Summary_View_of_an_Instance_or_Image.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Changing_the_Summary_View_of_an_Instance_or_Image.adoc
@@ -4,7 +4,7 @@ View the timeline of events for an instance or image if registered to a Host.
 
 . Navigate to menu:Clouds[Instances].
 . Click the instance to view the timeline.
-. Click  image:images/1994.png[] (*Monitoring*), and then  image:images/1995.png[] (*Timelines) on the taskbar.
+. Click  image:images/1994.png[] (*Monitoring*), and then  image:images/1995.png[] (*Timelines*) on the taskbar.
 . From *Options*, customize the period of time to display, and the types of events to view.
 +
 
