--- a/doc-Managing_Infrastructure_and_Inventory/topics/Controlling_the_Power_State_of_an_Instance.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Controlling_the_Power_State_of_an_Instance.adoc
@@ -4,13 +4,13 @@ Follow this procedure to control the power states of an instance through the Clo
 
 . Navigate to menu:Clouds[Instances].
 . Click the instance to change the power state.
-. Click #Power Operations#, then click the button for the desired power operation.
+. Click *Power Operations*, then click the button for the desired power operation.
 +
-* Click  image:images/1999.png[] (Start) to start the selected instances.
-* Click  image:images/2000.png[] (Terminate) to terminate the selected instances.
-* Click  image:images/2004.png[] (Suspend) to suspend the selected instances.
-* Click  image:images/2001.png[] (Reset) to reset the selected instances.
-* Click  image:images/2002.png[] (Stop Guest) to stop the guest operating system.
-* Click  image:images/2003.png[] (Restart Guest) to restart the guest operating system.
+* Click  image:images/1999.png[] (*Start*) to start the selected instances.
+* Click  image:images/2000.png[] (*Terminate*) to terminate the selected instances.
+* Click  image:images/2004.png[] (*Suspend*) to suspend the selected instances.
+* Click  image:images/2001.png[] (*Reset*) to reset the selected instances.
+* Click  image:images/2002.png[] (*Stop Guest*) to stop the guest operating system.
+* Click  image:images/2003.png[] (*Restart Guest*) to restart the guest operating system.
 
-. Click btn:[OK].
+. Click *OK*.
