--- a/doc-Managing_Infrastructure_and_Inventory/topics/Creating_a_Virtual_Machine_or_Template_Report.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Creating_a_Virtual_Machine_or_Template_Report.adoc
@@ -4,8 +4,8 @@ For a listing of virtual machines and templates, you can create a quick report i
 
 . Navigate to menu:Infrastructure[Virtual Machines].
 . Click the accordion for the items for report creation.
-. Click  image:images/2107.png[]btn:[(Download)].
+. Click  image:images/2107.png[] (*Download*).
 +
-* Click  image:images/2132.png[] for a TXT file.
-* Click  image:images/2133.png[] for a CSV file.
-* Click  image:images/2134.png[] for a PDF file.
+* Click  image:images/2132.png[] for a *TXT* file.
+* Click  image:images/2133.png[] for a *CSV* file.
+* Click  image:images/2134.png[] for a *PDF* file.
