--- a/doc-Managing_Infrastructure_and_Inventory/topics/Creating_an_Instance_Comparison_Report.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Creating_an_Instance_Comparison_Report.adoc
@@ -3,8 +3,8 @@
 Output a the data from a comparison report in TXT, CSV or PDF formats.
 
 . Create the comparison for the report.
-. Click  image:images/2107.png[]btn:[(Download)].
+. Click  image:images/2107.png[] (*Download*).
 +
-* Click  image:images/2132.png[] for a TXT file.
-* Click  image:images/2133.png[] for a CSV file.
-* Click  image:images/2134.png[] for a PDF file.
+* Click  image:images/2132.png[] for a *TXT* file.
+* Click  image:images/2133.png[] for a *CSV* file.
+* Click  image:images/2134.png[] for a *PDF* file.
