--- a/doc-Managing_Infrastructure_and_Inventory/topics/Creating_an_Instance_or_Image_Report.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Creating_an_Instance_or_Image_Report.adoc
@@ -4,8 +4,8 @@ For a listing of instances and images, you can create a quick report in CSV, TXT
 
 . Navigate to menu:Clouds[Instances].
 . Click the accordion for the desired items for report creation.
-. Click  image:images/2107.png[]btn:[(Download)].
+. Click  image:images/2107.png[](*Download*).
 +
-* Click  image:images/2132.png[] for a TXT file.
-* Click  image:images/2133.png[] for a CSV file.
-* Click  image:images/2134.png[] for a PDF file.
+* Click  image:images/2132.png[] for a *TXT* file.
+* Click  image:images/2133.png[] for a *CSV* file.
+* Click  image:images/2134.png[] for a *PDF* file.
