--- a/doc-Managing_Infrastructure_and_Inventory/topics/Detecting_Drift_on_Clusters.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Detecting_Drift_on_Clusters.adoc
@@ -11,29 +11,29 @@ Detecting drift provides users with the following benefits:
 
 . Navigate to menu:Infrastructure[Clusters].
 . Click on the cluster to view drift.
-. Click #Relationships# in the Cluster Accordion.
-. Click #Drift History#.
+. Click *Relationships* in the Cluster Accordion.
+. Click *Drift History*.
 . Check the analyses to compare.
-. Click  image:images/1946.png[] btn:[(Drift Analysis)] at the top of the screen.
+. Click  image:images/1946.png[] (*Drift Analysis*) at the top of the screen.
   The results are displayed.
-. Check the #Comparison# sections on the left to view in your comparison.
+. Check the *Comparison* sections on the left to view in your comparison.
 . Click the plus sign next to the section name to expand it.
 +
 * An item displayed on red text shows a change from the base analysis.
   An item displayed in black text shows no change from the base analysis.
-* A  image:images/2177.png[] btn:[(Changed from previous)] shows there has been a change since the last analysis.
-* A  image:images/2150.png[] btn:[(Same as previous)] means there has been no change since the last analysis.
-* Click  image:images/1861.png[] btn:[(Remove from drift)] at the bottom of a column to remove a specific analysis.
+* A  image:images/2177.png[] (*Changed from previous*) shows there has been a change since the last analysis.
+* A  image:images/2150.png[] (*Same as previous*) means there has been no change since the last analysis.
+* Click  image:images/1861.png[] (*Remove from drift*) at the bottom of a column to remove a specific analysis.
   The drift is then recalculated and the new results display.
 
-. Click  image:images/2023.png[] btn:[(Expanded View)] to see the expanded view.
-  Click  image:images/2024.png[] btn:[(Compressed View)] to compress the information.
+. Click  image:images/2023.png[] (*Expanded View*) to see the expanded view.
+  Click  image:images/2024.png[] (*Compressed View*)] to compress the information.
 . Click the minus sign next to the section name to collapse it.
 . To limit the type of views, there are three buttons in the Taskbar.
 +
-* Click  image:images/2178.png[] btn:[(All attributes)] to see all attributes of the sections selected.
-* Click  image:images/2204.png[] btn:[(Attributes with different values)] to see only the attributes different across drifts.
-* Click  image:images/2148.png[] btn:[(Attributes with the same values)] to see only the attributes the same across drifts.
+* Click  image:images/2178.png[] (*All attributes*) to see all attributes of the sections selected.
+* Click  image:images/2204.png[] (*Attributes with different values*) to see only the attributes different across drifts.
+* Click  image:images/2148.png[] (*Attributes with the same values*) to see only the attributes the same across drifts.
 
 
 The drift displays for your cluster.
