--- a/doc-Managing_Infrastructure_and_Inventory/topics/Detecting_Drift_on_Hosts.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Detecting_Drift_on_Hosts.adoc
@@ -11,31 +11,30 @@ Detecting drift provides you the following benefits:
 
 . Navigate to menu:Infrastructure[Hosts].
 . Click on the host to view drift.
-. Click btn:[Relationships] in the Host Accordion.
-. Click btn:[Drift History].
+. Click *Relationships* in the Host Accordion.
+. Click *Drift History*.
 . Check the analyses to compare.
-. Click  image:images/1946.png[] btn:[(Drift)] at the top of the screen.
+. Click  image:images/1946.png[] (*Drift*) at the top of the screen.
   The results display.
-. Check the #Comparison# sections on the left to view in your comparison.
-. Click btn:[Apply].
+. Check the *Comparison* sections on the left to view in your comparison.
+. Click *Apply*.
 . Click the plus sign next to the sections name to expand it.
 +
 * An item displayed on red text shows a change from the base analysis.
   An item displayed in black text shows no change from the base analysis.
-* A  image:images/2177.png[] btn:[(Changed from previous)] shows a change since the last analysis.
-* A  image:images/2150.png[] btn:[(Same as previous)] means no change since the last analysis.
-* Click  image:images/1861.png[] btn:[(Remove from drift)] at the bottom of a column to remove a specific analysis.
+* A  image:images/2177.png[] (*Changed from previous*) shows a change since the last analysis.
+* A  image:images/2150.png[] (*Same as previous*) means no change since the last analysis.
+* Click  image:images/1861.png[] (*Remove from drift*) at the bottom of a column to remove a specific analysis.
   The drift recalculates and the new results display.
 
-. Click  image:images/2023.png[] btn:[(Expanded View)] to see the expanded view.
-  Click  image:images/2024.png[] btn:[(Compressed View)] to compress the information.
+. Click  image:images/2023.png[] (*Expanded View*) to see the expanded view.
+  Click  image:images/2024.png[] (*Compressed View*) to compress the information.
 . Click the minus sign next to the sections name to collapse it.
 . To limit the type of views, you have three buttons in the Taskbar:
 +
-* Click  image:images/2178.png[] btn:[(All attributes)] to see all attributes of the sections you selected.
-* Click  image:images/2204.png[] btn:[(Attributes with different values)] to see only the attributes that are different across the drifts.
-* Click  image:images/2148.png[] btn:[(Attributes with the same values)] to see only the attributes that are the same across drifts.
-
+* Click  image:images/2178.png[] (*All attributes*) to see all attributes of the sections you selected.
+* Click  image:images/2204.png[] (*Attributes with different values*) to see only the attributes that are different across the drifts.
+* Click  image:images/2148.png[] (*Attributes with the same values*) to see only the attributes that are the same across drifts.
 
 The drift comparison displays.
 Download the data or create a report from your drift for analysis using external tools.
