--- a/doc-Managing_Infrastructure_and_Inventory/topics/Discovering_Multiple_Hosts.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Discovering_Multiple_Hosts.adoc
@@ -3,14 +3,14 @@
 If not using a provider, use CloudForms Management Engine's Discovery to find hosts in your environment within a range of IP addresses.
 
 . Navigate to menu:Infrastructure[Hosts].
-. Click  image:images/1847.png[] btn:[(Configuration)], then click  image:images/2119.png[] btn:[(Discover Hosts)].
-. Check the types of hosts to discover: ESX or IPMI.
-. Type in a range of #IP Addresses#.
+. Click  image:images/1847.png[] (*Configuration*), then click  image:images/2119.png[] (*Discover Hosts*).
+. Check the types of hosts to discover: `ESX` or `IPMI`.
+. Type in a range of *IP Addresses*.
 +
 
 image::images/2213.png[]
 
-. Click btn:[Start].
+. Click *Start*.
 
 CloudForms Management Engine searches for the supported hosts.
 When available, the new hosts display.
