--- a/doc-Managing_Infrastructure_and_Inventory/topics/Editing_Instance_or_Image_Properties.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Editing_Instance_or_Image_Properties.adoc
@@ -6,7 +6,7 @@ SmartState Analysis also can detect this.
 . From menu:Clouds[Instances].
 . Click the accordion for the items to edit.
 . Click the item to edit properties.
-. Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/1851.png[]btn:[(Edit this Instance or Edit this Image)] on the Taskbar.
-. From the #Parent Instance# dropdown, select the parent instance.
-. From #Child Instance# selection, select instances that are based on the current instance from the list of #Available Instances#.
-. Click btn:[Save].
+. Click  image:images/1847.png[] (*Configuration*), and then  image:images/1851.png[](*Edit this Instance or Edit this Image*) on the Taskbar.
+. From the *Parent Instance* dropdown, select the parent instance.
+. From *Child Instance* selection, select instances that are based on the current instance from the list of *Available Instances*.
+. Click *Save*.
