--- a/doc-Managing_Infrastructure_and_Inventory/topics/Extracting_Running_Processes.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Extracting_Running_Processes.adoc
@@ -3,13 +3,13 @@
 
 CloudForms Management Engine can collect processes running on Windows virtual machines.
 To do this, enter domain credentials for the zone where the virtual machine is located.
-For more information, see the _CloudForms General Configuration_ guide.
+For more information, see the link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.0/general-configuration/general-configuration[CloudForms General Configuration guide].
 The virtual machine must be running and must have an IP address in the VMDB, usually obtained from a SmartState Analysis.
 
 . Navigate to menu:Infrastructure[Virtual Machines].
 . Check the Virtual Machines to collect the processes.
-. Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2152.png[]btn:[(Extract Running Processes)] on the Taskbar.
-. Click btn:[OK].
+. Click  image:images/1847.png[] (*Configuration*), and then  image:images/2152.png[](*Extract Running Processes*) on the Taskbar.
+. Click *OK*.
 
 The server returns the running processes.
 View the summary of the virtual machine to see the details.
