--- a/doc-Managing_Infrastructure_and_Inventory/topics/Extracting_Running_Processes_from_Instances_and_Images.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Extracting_Running_Processes_from_Instances_and_Images.adoc
@@ -2,10 +2,10 @@
 
 CloudForms Management Engine can collect processes running on Windows instances.
 To do this, enter domain credentials for the zone where the instance is located.
-For more information, see the _CloudForms General Configuration_ guide.
+For more information, see the link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.0/general-configuration/general-configuration[CloudForms General Configuration guide].
 The instance must be running and must have an IP address in the VMDB, usually obtained from a SmartState Analysis.
 
 . Navigate to menu:Clouds[Instances].
 . Click the checkboxes for the instances to collect processes.
-. Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2152.png[]btn:[(Extract Running Processes)] on the Taskbar.
-. Click btn:[OK].
+. Click  image:images/1847.png[] (*Configuration*), and then  image:images/2152.png[](*Extract Running Processes*) on the Taskbar.
+. Click *OK*.
