--- a/doc-Managing_Infrastructure_and_Inventory/topics/Installing_VMware_VDDK_on_CloudForms_Management_Engine.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Installing_VMware_VDDK_on_CloudForms_Management_Engine.adoc
@@ -2,15 +2,17 @@
 
 Execution of SmartState Analysis on virtual machines within a VMware environment requires the Virtual Disk Development Kit (VDDK). CloudForms Management Engine supports VDDK 5.5.
 
-. Download VDDK 5.5 ([path]_VMware-vix-disklib-5.5.0-1284542.x86_64.tar.gz_ at the time of this writing) from the VMware website.
+. Download VDDK 5.5 (`VMware-vix-disklib-5.5.0-1284542.x86_64.tar.gz` at the time of this writing) from the VMware website.
 +
-NOTE: If you do not already have a login ID to VMware, then you will need to create one.
-At the time of this writing, the file can be found by navigating to menu:Downloads[All Downloads, Drivers & Tools > VMware vSphere > Drivers & Tools]. Expand #Automation Tools and SDKs#, and select #vSphere Virtual Disk Development Kit 5.5#.
+[NOTE]
+======
+If you do not already have a login ID to VMware, then you will need to create one.
+At the time of this writing, the file can be found by navigating to menu:Downloads[All Downloads, Drivers & Tools > VMware vSphere > Drivers & Tools]. Expand *Automation Tools and SDKs*, and select *vSphere Virtual Disk Development Kit 5.5*.
 Alternatively, find the file by searching for it using the #Search# on the VMware site.
-
-. Download and copy the [path]_VMware-vix-disklib-5.5.0-1284542.x86_64.tar.gz_ file to the [path]_/root_ directory of the appliance.
-. Start an SSH session into the appliance.
-. Extract and install VDDK 5.5.
+======
+. Download and copy the `VMware-vix-disklib-5.5.0-1284542.x86_64.tar.gz` file to the `/root` directory of the appliance.
+. Start an `SSH` session into the appliance.
+. Extract and install `VDDK 5.5`.
   using the following commands:
 +
 ----
@@ -42,17 +44,17 @@ Enjoy,
 --the VMware team
 ----
 
-. Run +ldconfig+ in order for CloudForms Management Engine to find the newly installed VDDK library.
+. Run `ldconfig` in order for CloudForms Management Engine to find the newly installed VDDK library.
 +
 [NOTE]
-====
+======
 Use the following command to verify the VDDK files are listed and accessible to the appliance:
 
 ----
 
 # ldconfig -p | grep vix
 ----
-====
+======
 
 . Restart the CloudForms Management Engine Appliance.
 
