--- a/doc-Managing_Infrastructure_and_Inventory/topics/Performing_SmartState_Analysis_on_Clusters.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Performing_SmartState_Analysis_on_Clusters.adoc
@@ -4,7 +4,7 @@ Analyze a cluster to gather historical data to compare with previous points in t
 
 . Navigate to menu:Infrastructure[Clusters].
 . Check the clusters to analyze.
-. Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2147.png[] btn:[(Perform SmartState Analysis)].
-. Click btn:[OK].
+. Click  image:images/1847.png[] (*Configuration*), and then  image:images/2147.png[] (*Perform SmartState Analysis*).
+. Click *OK*.
 
 The SmartState Analysis begins and returns the current data.
