--- a/doc-Managing_Infrastructure_and_Inventory/topics/Performing_SmartState_Analysis_on_Hosts.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Performing_SmartState_Analysis_on_Hosts.adoc
@@ -2,9 +2,11 @@
 
 Perform a SmartState Analysis on a host to collect additional information about it, such as patches, CPU, and memory.
 
-NOTE: [literal]+root+ or administrator credentials are required to get patch information.
-
+[NOTE]
+======
+`root` or administrator credentials are required to get patch information.
+======
 . Navigate to menu:Infrastructure[Hosts].
 . Check the hosts to analyze.
-. Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2147.png[]btn:[(Perform SmartState Analysis)].
-. Click btn:[OK].
+. Click  image:images/1847.png[] (*Configuration*), and then  image:images/2147.png[](*Perform SmartState Analysis*).
+. Click *OK*.
