--- a/doc-Managing_Infrastructure_and_Inventory/topics/Performing_SmartState_Analysis_on_an_Instance_or_Image.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Performing_SmartState_Analysis_on_an_Instance_or_Image.adoc
@@ -5,10 +5,13 @@ To analyze, a SmartProxy is required to have visibility to the instance's storag
 
 . Navigate to menu:Clouds[Instances].
 . Click the accordion for the items to analyze.
-. Click the #Instance# or #Image# to analyze.
-. Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2147.png[] btn:[(Perform SmartState Analysis)] on the Taskbar.
-. Click btn:[OK].
+. Click the *Instance* or *Image* to analyze.
+. Click  image:images/1847.png[] (*Configuration*), and then  image:images/2147.png[] (*Perform SmartState Analysis*) on the Taskbar.
+. Click *OK*.
 
-IMPORTANT: SmartState Analysis for instances runs as a process independent from providers.
+[IMPORTANT]
+======
+SmartState Analysis for instances runs as a process independent from providers.
 For example, a successful SmartState Analysis of a host does not mean SmartState Analysis for instances will be successful.
 Ensure to enter credentials for the provider that contains the instance for the SmartState Analysis to work.
+======
