--- a/doc-Managing_Infrastructure_and_Inventory/topics/Refreshing_Relationships_and_Power_States_for_a_Host.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Refreshing_Relationships_and_Power_States_for_a_Host.adoc
@@ -2,10 +2,12 @@
 
 Refresh the relationships and power states of the items associated with your hosts from the Host Taskbar.
 
-NOTE: [literal]+root+ or administrator credentials are required to get patch information.
-
+[NOTE]
+======
+`root` or administrator credentials are required to get patch information.
+======
 . Navigate to menu:Infrastructure[Hosts].
 . Click on the host to refresh.
-. Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2003.png[] btn:[(Refresh Relationships and Power States)] on the Host Taskbar.
+. Click  image:images/1847.png[] (*Configuration*), and then  image:images/2003.png[] (*Refresh Relationships and Power States*) on the Host Taskbar.
 
 CloudForms Management Engine determines the state (running, stopped, or paused) of all virtual machines registered to the host.
