--- a/doc-Managing_Infrastructure_and_Inventory/topics/Refreshing_Virtual_Machines_and_Templates.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Refreshing_Virtual_Machines_and_Templates.adoc
@@ -6,6 +6,6 @@ This includes information such as the power state, container, and hardware devic
 . Navigate to menu:Infrastructure[Virtual Machines].
 . Click the accordion for the items to analyze.
 . Check the items to refresh.
-. Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2003.png[]btn:[(Refresh Relationships and Power States)] on the #Virtual Machine Taskbar#.
+. Click  image:images/1847.png[] (*Configuration*), and then  image:images/2003.png[] (*Refresh Relationships and Power States*) on the *Virtual Machine Taskbar*.
 
 The console returns a refreshed list of the data associated with the selected virtual machines.
