--- a/doc-Managing_Infrastructure_and_Inventory/topics/Removing_Hosts.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Removing_Hosts.adoc
@@ -4,8 +4,8 @@ If a host is decommissioned or requires troubleshooting, it might require remova
 
 . Navigate to menu:Infrastructure[Hosts].
 . Check the hosts to remove.
-. Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2157.png[] btn:[(Remove Hosts from the VMDB)].
-. Click btn:[OK].
+. Click  image:images/1847.png[] (*Configuration*), and then  image:images/2157.png[] (*Remove Hosts from the VMDB*).
+. Click *OK*.
 
 The hosts are removed.
 The virtual machines remain in the VMDB, but are no longer associated with their respective hosts.
