--- a/doc-Managing_Infrastructure_and_Inventory/topics/Removing_Instances_and_Images_from_the_VMDB.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Removing_Instances_and_Images_from_the_VMDB.adoc
@@ -6,5 +6,5 @@ This does not however remove the instance or image from its Provider.
 . Navigate to menu:Clouds[Instances].
 . Click the accordion for the items to remove.
 . Click the checkboxes for the items to remove.
-. Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2157.png[] btn:[(Remove from the VMDB)] button.
-. Click btn:[OK].
+. Click  image:images/1847.png[] (*Configuration*), and then  image:images/2157.png[] (*Remove from the VMDB*) button.
+. Click *OK*.
