--- a/doc-Managing_Infrastructure_and_Inventory/topics/Removing_Virtual_Machines_and_Templates_from_the_VMDB.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Removing_Virtual_Machines_and_Templates_from_the_VMDB.adoc
@@ -6,5 +6,5 @@ This does not however remove the virtual machine or template from its Datastore 
 . Navigate to menu:Infrastructure[Virtual Machines].
 . Click the accordion for the items to remove.
 . Check the items to remove.
-. Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2157.png[] btn:[(Remove from the VMDB)] button.
-. Click btn:[OK].
+. Click  image:images/1847.png[] (*Configuration*), and then  image:images/2157.png[] (*Remove from the VMDB*) button.
+. Click *OK*.
