--- a/doc-Managing_Infrastructure_and_Inventory/topics/Removing_a_Resource_Pool.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Removing_a_Resource_Pool.adoc
@@ -4,8 +4,8 @@ If a resource pool is decommissioned or requires troubleshooting, it might requi
 
 . Navigate to menu:Infrastructure[Resource Pools].
 . Click on the resource pool to remove.
-. Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2157.png[] btn:[(Remove from the VMDB)].
-. Click #OK#.
+. Click  image:images/1847.png[] (*Configuration*), and then  image:images/2157.png[] (*Remove from the VMDB*).
+. Click *OK*.
 
 The resource pool is removed.
 The virtual machines remain in the VMDB, but are no longer associated with this resource pool.
