--- a/doc-Managing_Infrastructure_and_Inventory/topics/Resource_Pools_Accordion.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Resource_Pools_Accordion.adoc
@@ -2,5 +2,5 @@
 
 Use the Resource Pools Accordion to access the properties of and objects associated with the resource pool. 
 
-* Click #Properties# to view the Resource Pools Summary screen. 
-* Click #Relationships# to see the clusters, virtual machines, and hosts related to this resource pool. 
+* Click *Properties* to view the Resource Pools Summary screen. 
+* Click *Relationships* to see the clusters, virtual machines, and hosts related to this resource pool. 
